Feature(Style): Add font family and color

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
     background-attachment: fixed;
     background-position: center;
     background-size: cover;
+    color: #1a2125;
+    font-family: Lato;
   ">
     <div id="root"></div>
   </body>
