--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <title>Démineur</title>
+    <title>Minesweeper</title>
   </head>
   <body style="
     background-image: url(%PUBLIC_URL%/background.jpg);
