--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,14 @@
 <!doctype html>
 <html lang="fr">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png">
-    <title>Minesweeper</title>
-  </head>
-  <body style="
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png">
+  <title>Minesweeper</title>
+</head>
+
+<body style="
     background-image: url(%PUBLIC_URL%/background.jpg);
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -15,6 +17,8 @@
     color: #1a2125;
     font-family: Lato;
   ">
-    <div id="root"></div>
-  </body>
+  <span>%PUBLIC_URL%</span>
+  <div id="root"></div>
+</body>
+
 </html>
